--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "main": "./core/index",
     "scripts": {
         "start": "node index",
-        "test": "./node_modules/.bin/grunt validate --verbose",
-        "install": "git submodule update --init && bundle install && ./node_modules/.bin/grunt init"
+        "test": "./node_modules/.bin/grunt validate --verbose"
     },
     "engines": {
         "node": "~0.10.0"
