Allowing my fork to commit themes
So I can deploy via git

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ projectFilesBackup
 /content/tmp/*
 /content/data/*
 /content/apps/**/*
-/content/themes/**/*
+/content/themes/
 /content/images/**/*
 !/content/themes/casper/**
 !/README.md
